Description
The C library's data file reader isn't propagating error codes correctly, which causes avro_file_reader_read to not correctly detect EOF. Instead, it will return as if it's reading the final block of the file twice, though it's not filling in the datum parameter for the second pass through the block.