AVRO-819. C: Fix file reader EOF detection

This patch fixes a bug that Miki Tebeka discovered in the file reader
code.  Errors weren't getting propagated correctly through the call
stack.  This caused the file reader to not correctly detect EOF, and so
you'd loop through the final block in a file twice.  (The second time
through, we wouldn't fill in the datum instance.)


git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1102335 13f79535-47bb-0310-9956-ffa450edef68