lang/c/src/avro_private.h
@@ -33,6 +33,7 @@
 		rval = call;				\
 		if (rval) {				\
 			avro_set_error(__VA_ARGS__);	\
+			return rval;			\
 		}					\
 	}
 
@@ -41,6 +42,7 @@
 		rval = call;				\
 		if (rval) {				\
 			avro_prefix_error(__VA_ARGS__);	\
+			return rval;			\
 		}					\
 	}
 
